Destructuring assignment in a var declaration list incorrectly consumes subsequent variable initialisers https://bugs.webkit.org/show_bug.cgi?id=135773

Reviewed by Michael Saboff.

Source/JavaScriptCore:

We should be using parseAssignment expression in order to get the correct
precedence.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseVarDeclarationList):

LayoutTests:

Add new tests.

* js/destructuring-assignment-expected.txt:
* js/script-tests/destructuring-assignment.js:


Canonical link: https://commits.webkit.org/153662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172381 268f45cc-cd09-0410-ab3c-d52691b4dbfc